# YDotTest

./: settings.gradle
app/: build.gradle
app/release/: app-release.apk
app/src/androidTest/java/com/cdgo/ydottest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cdgo/ydottest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cdgo/ydottest/: ExampleUnitTest.java
libYdot/: CMakeCache.txt  CMakeLists.txt  android_gradle_build.json  build.gradle  build.ninja  cmake_install.cmake  rules.ninja
libYdot/src/androidTest/java/com/cdgo/libydot/: ExampleInstrumentedTest.java
libYdot/src/main/: AndroidManifest.xml
libYdot/src/main/cpp/: native-lib.cpp
libYdot/src/main/java/com/cdgo/libydot/: Constants.java  LibX.java  MainActivity.java  Pen.java  PenJni.java
libYdot/src/main/java/com/cdgo/tools/: Dir.java  Img.java
libYdot/src/main/jni/: PenJni.cpp
libYdot/src/main/jni/interface/: interface.cpp  ydotLib.h
libYdot/src/main/res/values/: strings.xml
libYdot/src/test/java/com/cdgo/libydot/: ExampleUnitTest.java
